fix: darken bg color on dark mode, fixed header fonts in markdown-body (e.g. FAQ), added log indices

--- a/assets/css/_custom.scss
+++ b/assets/css/_custom.scss
@@ -138,7 +138,7 @@ body.app {
 @media (prefers-color-scheme: dark) {
   @include media-breakpoint-up(md) {
     .bg-fixed {
-      background-color: #191d21;
+      background-color: #0d1116;
     }
   }
 }
