--- a/assets/css/_markdown.scss
+++ b/assets/css/_markdown.scss
@@ -18,6 +18,10 @@
   // margin-right: 20px;
   font-family: $font-family-sans-serif !important;
 
+  h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+    font-family: $font-family-sans-serif !important;
+  }
+
   @for $index from 1 through 6 {
     h#{$index} {
       .anchor {
