--- a/assets/css/app-dark.scss
+++ b/assets/css/app-dark.scss
@@ -34,10 +34,10 @@ $input-disabled-bg:                     $dark;
     @extend .text-light;
   }
   .card {
-    background-color: #191d21 !important;
+    background-color: #0d1116 !important;
   }
   .bg-dark, .bg-themed, .navbar-themed {
-    background-color: #191d21 !important;
+    background-color: #0d1116 !important;
     .btn-outline-dark {
       @extend .text-light;
     }
